--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -236,7 +236,7 @@ en:
         not_found: 'No fulfillments were found.'
         status: 'Status'
         product_type: 'Product type'
-        renewed: 'Renewed.'
+        renewed: 'Renewed'
       communication:
         response: 'Response'
         template_name: 'Template name'
