--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -98,6 +98,7 @@ en:
           credit: Credit
           void: Credit
           authorization_capture: 'Authorization-Capture'
+          chargeback: Chargeback
         date: 'Date'
         description: 'Description'
         amount: 'Amount'
