ref#25490-added cc_type on tablet_active_credit_card on member'sshow page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -212,6 +212,7 @@ en:
         blacklisted: 'Blacklisted'
         last_digits: 'Last digits'
         active: 'active'
+        type_unknown: 'unknown'
       operation:
         operation_date: 'Operation date'
         description: 'Description'
