ref#23907-fixed translation.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -182,7 +182,7 @@ en:
         has_no_preferences_saved: 'There are no preferences saved.'
         last_synced_at: 'Last successful sync'
         last_sync_error: 'Last failed sync'
-        status_blacklisted: 'Lapsed - Blisted'
+        status_blacklisted: '- Blisted'
         sync_status_priorities:
           synced: success
           unsynced: warning
