--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -254,6 +254,8 @@ en:
         sent_success: 'Sent success'
         not_found: 'No communications were found.'
       club_cash_transaction: 
+        id: 'ID'
+        created_at: 'Created at'
         amount: 'Amount'
         amount_help: '(e.g., 100.00) Please enter a negative number to subtract club cash points. Amounts with more than two digits after comma will be truncate.'
         description: 'Description'
