when we change a fulfillment status, we should add an operation. not finished. we need others issues to test this. refs #25653

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -95,8 +95,7 @@ en:
     credit_card_in_use: "We're sorry but our system shows that the credit card you entered is already in use! Please try another card or call our members services at: %{cs_phone_number}."
     credit_card_blacklisted: "There was an error with your credit card information. Please call member services at: %{cs_phone_number}."
     expired_credit_card: "Credit card to activate is expired."
-    fulfillment_out_of_stock: "Product does not have stock."
-    fulfillment_error: "Could not be marked as sent."
+    fulfillment_error: "Could not update fulfillment status."
     credit_amount_invalid: "Credit amount must be a positive number."
     refund_invalid: "Cant credit more $ than the original transaction amount"
     credit_card_blank_with_grace: "Payment gateway not found."
