--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -106,6 +106,8 @@ en:
     unrecoverable_error: "We cant process your join now. Contact Member Services if you would like more information at: %{cs_phone_number}"
     get_token_mes_error: "An error was encountered while processing your request."
     club_is_not_enable_for_new_enrollments: "We are not accepting new enrollments at this time. Please call member services at: %{cs_phone_number}"
+    product_empty: "The product does not exists."
+    product_out_of_stock: "you are trying to move a member to a fulfillment queue for a product that has no stock. Add stock or set to allow backorders"
   activerecord:
     model:
       members: 'Members'
