ref#25724- added feature to fulfillment file logic.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -278,6 +278,15 @@ en:
         new_status: 'New status'
         product_type: 'Product type'
         renewed: 'Renewed'
+      fulfillment_files:
+        id: 'ID'
+        created_at: 'Created at'
+        working_file: 'Working file'
+        view: 'View'
+        status: 'Status'
+        product: 'Product'
+        date: 'Date'
+        processed: 'Processed'
       communication:
         response: 'Response'
         template_name: 'Template name'
