ref#25724-fixed view translation.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -75,6 +75,7 @@ en:
     recover: 'Recover'
     create_csv_file: 'Create CSV File'
     create_xls_file: 'Create XLS File'
+    export_all_to_xls: 'Export all to XLS'
   admin:
     agents:
       index:
