refs #25728 - adding family memberships flag at club model

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -241,6 +241,7 @@ en:
         name: 'Name'
         description: 'Description'
         members_count: 'Members count'
+        family_memberships_allowed: Family memberships allowed
       credit_card:
         number: 'Number'
         expire_date: 'Expire date'
