--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -114,6 +114,7 @@ en:
     fulfillment_new_status_equal_to_old: "Nothing to change on %{fulfillment_sku} fulfillment."
     fulfillment_reason_blank: "Reason is blank, please enter a reason."
     fulfillment_is_renwed: "Fulfillment is renewed. No operation can be done."
+    fulfillment_file_cant_be_empty: "No fulfillments selected. Please, select fulfillments in order to crate XLS file."
   activerecord:
     model:
       members: 'Members'
