--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -101,6 +101,7 @@ en:
     fulfillment_error: "Could not update fulfillment status."
     fulfillment_new_status_blank: "New status is blank. Please, select a new status to be applied."
     credit_amount_invalid: "Credit amount must be a positive number."
+    club_cash_transaction_invalid_amount: "Can not process club cash transaction with amount 0 or letters." 
     refund_invalid: "Cant credit more $ than the original transaction amount"
     credit_card_blank_with_grace: "Payment gateway not found."
     duplicate_transaction: "Duplicated Transaction: %{response}"
