ref#26070-added cc on transaction table

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -146,6 +146,7 @@ en:
         description: 'Description'
         amount: 'Amount'
         gw_trans: 'Gw trans'
+        cc_related: 'Credit Card Last Digits'
         not_found: 'No transactions were found.'
       agent:  
         login: "Username or email"
