ref#26055-fixed credit card last digits translation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -256,7 +256,7 @@ en:
         added_at: 'Added at'
         expire_year: 'Expire year'
         blacklisted: 'Blacklisted'
-        last_digits: 'Last digits'
+        last_digits: 'Last 4 digits'
         active: 'active'
         type_unknown: 'unknown'
       operation:
