--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -168,7 +168,7 @@ en:
         pardot_last_sync_error_at: Sync Error Time
         cohort: Cohort
         api_id: 'Remote ID'
-        member_id: 'Member ID'
+        id: 'Member ID'
         full_name: 'Full name'
         first_name: 'First name'
         last_name: 'Last name'
@@ -189,7 +189,6 @@ en:
         phone_area_code: Area
         phone_number: 'Phone Number'
         type_of_phone_number: 'Type of phone number'
-        id: 'Member id'
         status: 'Status'
         email: 'Email'
         external_id: 'External ID'
@@ -203,7 +202,6 @@ en:
         recycled_times_explanation: 'The number of recycle attempts in the current recycle process. If greater than 0, then the member is currently in a recycle stage. This number resets upon HD or successful charge.'
         quota: 'Quota'
         terms_of_membership_id: 'Terms of membership'
-        visible_id: 'Member ID'
         date_of_primary_cc: 'Date Added of Primary CC'
         date_of_active_credit_card: 'Date Added of Active CC'
         last_successful_bill_date: 'Last successful bill date'
