improvements on transactions datatable. added last 4 digits label request on a previous issue already closed

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -147,7 +147,7 @@ en:
         description: 'Description'
         amount: 'Amount'
         gw_trans: 'Gw trans'
-        cc_related: 'Credit Card Last Digits'
+        cc_related: 'CC Last 4 Digits'
         not_found: 'No transactions were found.'
       agent:  
         login: "Username or email"
