--- a/readme_api_doc.rdoc
+++ b/readme_api_doc.rdoc
@@ -1,6 +1,6 @@
 
 <h2>How we handle authentication</h2>
-On every call we will need you to send the "api_key". This api_key is the authentication token of the agent that is commiting the request. If the agent is not allowed, we will stop processing the request, and proceed to return a message telling that the agent is not authorized. 
+Authentication is handled using the "api_key" argument on each API call. This api_key is the authentication token of the agent that is commiting the request. If the agent is not allowed, we will stop processing the request, and proceed to return a message telling that the agent is not authorized. 
 Have in mind that this "api_token" is reseted on every login, and can be obtained using token's POST api method. <a href="TokensController.html">TokensMethods</a>
 
 <h2>Error codes</h2>
