--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -118,6 +118,7 @@ en:
     fulfillment_is_renwed: "Fulfillment is renewed. No operation can be done."
     fulfillment_file_cant_be_empty: "No fulfillments selected. Please, select fulfillments in order to crate XLS file."
     drupal_error_sync: "Unable to add club cash. There was a synchronization error, while requesting this." 
+    club_cash_not_supported: "Club cash is not supported for this club."
     unable_to_perform_due_member_status: "Unable to perfom this action. The member is not in the right status to perform this."
     airbrake_error_message: "Error while processing this request. A ticket has been submitted to our IT crew, in order to fix this inconvenience."
   activerecord:
