--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -77,6 +77,7 @@ en:
     create_csv_file: 'Create CSV File'
     create_xls_file: 'Create XLS File'
     export_all_to_xls: 'Export all to XLS'
+    bill_extra_amount: 'Bill extra amount'
   admin:
     agents:
       index:
@@ -138,6 +139,7 @@ en:
         refund_amount_help: 'Amount to refund'
         transaction_types: 
           sale: Sale
+          event_billing: event_billing
           refund: Credit
           credit: Credit
           void: Credit
