--- a/readme_api_doc.rdoc
+++ b/readme_api_doc.rdoc
@@ -6,8 +6,7 @@ Authentication is handled using the "api\_key" argument on each API call. This a
 We always answer with an string variable called "code". Acording to the method result we will set this "code" variable in order to match the result. (We are answering "000" for success, and with an especific value for each kind of error).
 
 <h2>Requests and response </h2>
-Every method receives a common HTTP request (GET, POST or PUT), and it returns a json response. We also support requests with parameters in json format. Within each method description, you can see that there is an example with curl of a success call to the method.
-
+Every method receives a common HTTP request (GET, POST or PUT), and it returns a json response. We also support requests with parameters in json format. Within each method description, you can see that there is an example with curl of a success call to the method. Have in mind that in order to run the examples, you will have to change the diffrentes IDs (club_id, terms_of_membership_id) in order to match the ones that were given to you. The same goes for api_key.
 
 <h2>Validations </h2>
 Within each method call, me make some validations before processing the request, just to make sure to work with clean data. In case there is a field with invalid data, the system will let you know about it. 
