--- a/README.rdoc
+++ b/README.rdoc
@@ -13,3 +13,8 @@ rake assets:precompile
 In order to create the doc you must run: 	
 yardoc --plugin rest --title "Api Documentation" --readme readme_api_doc.rdoc
 
+In order to update the db/declinestrategies.yml file, run:
+rake db:data:dump MODEL=DeclineStrategy
+After that make sure to replace: 
+"- !ruby/ActiveRecord:DeclineStrategy" with "- !ruby/object:DeclineStrategy"
+
