ref#27159-added index on fulfillment report. Also added translation related to this.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,6 +37,7 @@ en:
   text_cancel_are_you_sure: 'This member will be canceled. Are you really sure?'
   text_blacklist_are_you_sure: 'This member will be blacklisted. Are you really sure?'
   loading: 'Loading'
+  index: '#'
   menu: 
     logout: 'Logout'
     agents: 'Agents'
