[#51317997] - changed button label on member's profile

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -79,7 +79,7 @@ en:
     create_csv_file: 'Create CSV File'
     create_xls_file: 'Create XLS File'
     export_all_to_xls: 'Export all to XLS'
-    no_recurrent_billing: 'Bill no recurrent amount'
+    no_recurrent_billing: 'Bill 1-Time Transaction'
     manual_billing: 'Bill manual transaction'
   admin:
     agents:
