Added Suscritpion Plans translations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -135,6 +135,7 @@ en:
       fulfillments: 'Fulfillments'
       fulfillment_files: 'Fulfillment Files'
       disposition_types: 'Disposition Types'
+      suscription_plans: 'Suscription Plans'
     member: 'Member'
     term_of_membership: 'Term of membership'
     email_template: 'Email template'
@@ -317,6 +318,11 @@ en:
         not_have_payment_gateway_development: 'The club does not have payment gateway configuration for development mode'
         not_have_payment_gateway_production: 'The club does not have payment gateway configuration for production mode'
         club_cash_amount: 'Club cash amount'
+        id: 'ID'
+        plan_name: 'Plan Name'
+        external_code: 'External Code'
+        created_at: 'Created At'
+        by_agent: 'By Agent'
       email_template:
         name: 'Name'
         type: 'Type'
@@ -375,6 +381,7 @@ en:
         run_at: 'Run at'
         created_at: 'created_at'
         rescheduled_job: "re-scheduled Job: %{job}"
+
   date:
     formats:
       default: "%m/%d/%Y"
