--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -337,6 +337,7 @@ en:
         installment_period: 'Installment period'
         wizard:
           title: 'New Suscription Plan'
+          cancel_button_caption: 'Do you really want to leave this page? All your changes will be lost.'
           # Step 1
           step_1_instructions: '<STEP_1_INSTRUCTIONS_HERE>'
           plan_name: 'Suscription Plan Name'
