[#53545643] I have changed 'suscription' to 'subscription' on every link, migrate, field name.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -140,7 +140,7 @@ en:
       fulfillments: 'Fulfillments'
       fulfillment_files: 'Fulfillment Files'
       disposition_types: 'Disposition Types'
-      suscription_plans: 'Suscription Plans'
+      subscriptions_plans: 'Subscriptions Plans'
     member: 'Member'
     term_of_membership: 'Term of membership'
     email_template: 'Email template'
@@ -331,19 +331,19 @@ en:
         upgrade_to: 'Tom to upgrade'
         upgrade_tom_period: 'Upgrade after'
         suspension_period: 'Suspension period'
-        suscription_limits: 'Suscription limit'
+        subscription_limits: 'Subscription limit'
         if_cannot_bill: 'If cannot bill'
         initial_fee: 'Initial fee'
         payment_is_expected: 'Payment is Expected'
         trial_period: 'Trial period'
         installment_period: 'Installment period'
         wizard:
-          title_new: 'New Suscription Plan'
-          title_edit: 'Edit Suscription Plan'
+          title_new: 'New Subscription Plan'
+          title_edit: 'Edit Subscription Plan'
           cancel_button_caption: 'Do you really want to leave this page? All your changes will be lost.'
           # Step 1
           step_1_instructions: '<STEP_1_INSTRUCTIONS_HERE>'
-          plan_name: 'Suscription Plan Name'
+          plan_name: 'Subscription Plan Name'
           plan_name_help: 'help'
           external_code: 'External Code (optional)'
           external_code_help: 'help'
@@ -362,7 +362,7 @@ en:
           no_pay_is_expected: 'No Payment is Expected'
           recurring_amount: 'Recurring Amount'
           every: 'every'
-          suscription_terms: 'Suscription Terms'
+          subscription_terms: 'Subscription Terms'
           bill_until_cancelled: 'Bill until Member Cancelled'
           stop_billing_after: 'Stop billing after'
           keep_active_until_manually_cancelled: 'Keep active until manually cancelled'
