added reference to gem fork within gemfile

--- a/README.rdoc
+++ b/README.rdoc
@@ -10,8 +10,9 @@ Generate Model
 rake erd
 rake assets:precompile
 
-In order to create the doc you must run: 	
-yardoc --plugin rest --title "Api Documentation" --readme readme_api_doc.rdoc
+In order to create the doc you must run:
+you will have to use the binnary field within the bundler:
+/home/XXXXXXXX/.rvm/gems/ruby-1.9.3-p327/bundler/gems/yard-eb31004f1306/bin/yardoc --plugin rest --title "Api Documentation" --readme readme_api_doc.rdoc
 
 # in order to put phoenix into mantainance mode:
 rake maintenance:start
